syntax = "proto3";

option java_multiple_files = true;

package org.signal.registration.session;

/* A registration session stores information about a current attempt to register
a phone number. Registration sessions are created when a client first requests
that a verification code be sent to a phone number and store all state related
to the registration attempt including the phone number being registered, the
VerificationCodeSender responsible for sending and verifying registration codes,
and any persistent data that sender may need to verify codes. */
message RegistrationSession {
  string phone_number = 1;
  string sender_canonical_class_name = 2;
  bytes session_data = 3;
  string verified_code = 4;
}
